--- a/UsersAppGrpcService/Properties/launchSettings.json
+++ b/UsersAppGrpcService/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "UsersAppGrpcService": {
       "commandName": "Project",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
